--- a/package.json
+++ b/package.json
@@ -8,17 +8,30 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint-fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix"
+    "lint-fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+    "lint:style": "stylelint \"**/*.{vue,scss}\" --ignore-path .gitignore",
+    "lint:style-fix": "stylelint \"**/*.{vue,scss}\" --ignore-path .gitignore --fix"
   },
   "dependencies": {
+    "@vue/eslint-config-prettier": "^6.0.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/vuetify": "^1.12.1",
-    "eslint": "^8.5.0",
-    "eslint-plugin-vue": "^8.1.1"
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^8.2.6",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^7.18.0",
+    "postcss-html": "^1.3.0",
+    "prettier": "^2.2.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-config-recommended-vue": "^1.1.0",
+    "stylelint-config-standard-scss": "^3.0.0"
   }
 }
