--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "lint:style-fix": "stylelint \"**/*.{vue,scss}\" --ignore-path .gitignore --fix"
   },
   "dependencies": {
-    "@vue/eslint-config-prettier": "^6.0.0",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "vuetify": "^2.6.0"
@@ -25,13 +24,18 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^7.18.0",
-    "postcss-html": "^1.3.0",
+    "postcss": "^8.4.5",
+    "postcss-html": "^1.0.0",
+    "postcss-scss": "4.0.2",
     "prettier": "^2.2.1",
     "stylelint": "^14.1.0",
     "stylelint-config-recommended-scss": "^5.0.2",
     "stylelint-config-recommended-vue": "^1.1.0",
-    "stylelint-config-standard-scss": "^3.0.0"
+    "stylelint-config-standard-scss": "^3.0.0",
+    "vue": "^2.6.4",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.46.0"
   }
 }
