--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,12 @@
     "parser": "babel-eslint"
   },
   "rules": {
-    "vue/multi-word-component-names": 0
+    "vue/multi-word-component-names": 0,
+    "prettier/prettier": [
+      "error",
+      {
+          "endOfLine": "crlf"
+      }
+    ]
   }
 }
