--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
   "singleQuote": true,
   "semi": false,
-  "vueIndentScriptAndStyle": true
+  "vueIndentScriptAndStyle": true,
+  "bracketSameLine": true,
+  "endOfLine": crlf
 }
